--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Hello 123
+    <div id="container">
+        <div id="display">
+            0
+        </div>
+        <div id="buttons">
+            <button id="bAC">AC</button>
+            <button id="bDEL">DEL</button>
+            <button class="bt">(</button>
+            <button class="bt">)</button>
+
+            <button class="bt">7</button>
+            <button class="bt">8</button>
+            <button class="bt">9</button>
+            <button class="bt">/</button>
+
+            <button class="bt">4</button>
+            <button class="bt">5</button>
+            <button class="bt">6</button>
+            <button class="bt">*</button>
+
+            <button class="bt">1</button>
+            <button class="bt">2</button>
+            <button class="bt">3</button>
+            <button class="bt">-</button>
+
+            <button class="bt">0</button>
+            <button class="bt">.</button>
+            <button class="bt">+</button>
+            <button id="b=">=</button>
+        </div>
+    </div>
+    <script src="calc.js"></script> 
 </body>
 </html>
