--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <div id="container">
+        <div id="mode">
+            <button id="norm">Normal</button>
+            <button id="eqn">Equation</button>
+        </div>
+        <div id="blank">
+            
+        </div>
         <div id="display">
             0
         </div>
