--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <div id="container">
         <div id="mode">
             <button id="norm">Normal</button>
+            <button id="base">Base</button>
             <button id="eqn">Equation</button>
         </div>
         <div id="blank">
-            
+            <div id="base-buttons">
+                <button class="bt-bs">Dec</button>
+                <button class="bt-bs">Bin</button>
+                <button class="bt-bs">Oct</button>
+                <button class="bt-bs">Hex</button>
+            </div>
         </div>
         <div id="display">
             0
