--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <button id="eqn">Equation</button>
         </div>
         <div id="blank">
-            <div id="base-buttons">
-                <button class="bt-bs">Dec</button>
-                <button class="bt-bs">Bin</button>
-                <button class="bt-bs">Oct</button>
-                <button class="bt-bs">Hex</button>
-            </div>
+
         </div>
         <div id="display">
             0
+        </div>
+        <div id="base-buttons">
+            <button id="bt-dec">Dec</button>
+            <button id="bt-bin">Bin</button>
+            <button id="bt-oct">Oct</button>
         </div>
         <div id="buttons">
             <button id="bAC">AC</button>
