--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
         <div id="buttons">
             <button id="bAC">AC</button>
             <button id="bDEL">DEL</button>
-            <button class="bt">(</button>
-            <button class="bt">)</button>
+            <button class="bt bt-bae-dis">(</button>
+            <button class="bt bt-base-dis">)</button>
 
-            <button class="bt">7</button>
-            <button class="bt">8</button>
-            <button class="bt">9</button>
-            <button class="bt">/</button>
+            <button class="bt bt-bin-dis dig">7</button>
+            <button class="bt bt-oct-dis bt-bin-dis dig">8</button>
+            <button class="bt bt-oct-dis bt-bin-dis dig">9</button>
+            <button class="bt bt-base-dis">/</button>
 
-            <button class="bt">4</button>
-            <button class="bt">5</button>
-            <button class="bt">6</button>
-            <button class="bt">*</button>
+            <button class="bt bt-bin-dis dig">4</button>
+            <button class="bt bt-bin-dis dig">5</button>
+            <button class="bt bt-bin-dis dig">6</button>
+            <button class="bt bt-base-dis">*</button>
 
-            <button class="bt">1</button>
-            <button class="bt">2</button>
-            <button class="bt">3</button>
-            <button class="bt">-</button>
+            <button class="bt dig">1</button>
+            <button class="bt bt-bin-dis dig">2</button>
+            <button class="bt bt-bin-dis dig">3</button>
+            <button class="bt bt-base-dis">-</button>
 
-            <button class="bt">0</button>
-            <button class="bt">.</button>
-            <button class="bt">+</button>
+            <button class="bt dig">0</button>
+            <button class="bt bt-base-dis">.</button>
+            <button class="bt bt-base-dis">+</button>
             <button id="b=">=</button>
         </div>
     </div>
