--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body>  
     <div id="container">
+        <p id="title-txt">Calculator</p>  
         <div id="mode">
-            <button id="norm">Normal</button>
+            <button id="norm" style="background-color:olive; color:white">Normal</button>
             <button id="base">Base</button>
             <button id="eqn">Equation</button>
         </div>
@@ -21,14 +22,14 @@
             0
         </div>
         <div id="base-buttons">
-            <button id="bt-dec">Dec</button>
+            <button id="bt-dec"  style="background-color:olivedrab; color:white">Dec</button>
             <button id="bt-bin">Bin</button>
             <button id="bt-oct">Oct</button>
         </div>
         <div id="buttons">
             <button id="bAC">AC</button>
             <button id="bDEL">DEL</button>
-            <button class="bt bt-bae-dis">(</button>
+            <button class="bt bt-base-dis">(</button>
             <button class="bt bt-base-dis">)</button>
 
             <button class="bt bt-bin-dis dig">7</button>
